force-app/main/default/objects/CR_Container__c/CR_Container__c.object-meta.xml
<CustomObject>
    <label>CRコンテナ情報</label>
    <nameField>
        <label>CON No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>