force-app/main/default/objects/CR_Container__c/fields/Additional_Cost_Request__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>追加費用請求</label>
    <type>Checkbox</type>
</CustomField>