force-app/main/default/objects/CR_Container__c/fields/BL__c.field-meta.xml
<CustomField>
    <fullName>BL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BL</label>
    <type>Checkbox</type>
</CustomField>