force-app/main/default/objects/CR_Container__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking</label>
    <type>Checkbox</type>
</CustomField>