force-app/main/default/objects/CR_Container__c/fields/Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number__c</fullName>
    <label>ブッキングナンバー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>