force-app/main/default/objects/CR_Container__c/fields/Container_Charge_Request__c.field-meta.xml
<CustomField>
    <fullName>Container_Charge_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>コンテナチャージ請求</label>
    <type>Checkbox</type>
</CustomField>