force-app/main/default/objects/CR_Container__c/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <label>CON No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>