force-app/main/default/objects/CR_Container__c/fields/Customs_Broker__c.field-meta.xml
<CustomField>
    <fullName>Customs_Broker__c</fullName>
    <description>＝乙仲</description>
    <label>通関業者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>協栄船舶</fullName>
            </value>
            <value>
                <fullName>オーシャンロジスティクス</fullName>
            </value>
            <value>
                <fullName>ファーストサービス</fullName>
            </value>
            <value>
                <fullName>WORLDing</fullName>
            </value>
            <value>
                <fullName>山九</fullName>
            </value>
            <value>
                <fullName>三通国際物流株式会社</fullName>
            </value>
            <value>
                <fullName>トラストライナーロジ株式会社</fullName>
            </value>
            <value>
                <fullName>UNIT LOGISTICS JAPAN 株式会社</fullName>
            </value>
            <value>
                <fullName>ANT JAPAN</fullName>
            </value>
            <value>
                <fullName>NorthGo</fullName>
            </value>
            <value>
                <fullName>解体業者手配</fullName>
            </value>
            <value>
                <fullName>エイシントランス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>