force-app/main/default/objects/CR_Container__c/fields/Customs_Broker_Request__c.field-meta.xml
<CustomField>
    <fullName>Customs_Broker_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shipping Infomation　
Booking Confirmation</description>
    <label>乙仲依頼（SI送付）</label>
    <type>Checkbox</type>
</CustomField>