force-app/main/default/objects/CR_Container__c/fields/Cutting_Fee_Per_Container__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Fee_Per_Container__c</fullName>
    <label>カット費用（コンテナ単位）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>