force-app/main/default/objects/CR_Container__c/fields/CY_Cut__c.field-meta.xml
<CustomField>
    <fullName>CY_Cut__c</fullName>
    <label>CYカット日</label>
    <type>Date</type>
</CustomField>