force-app/main/default/objects/CR_Container__c/fields/CY_Open__c.field-meta.xml
<CustomField>
    <fullName>CY_Open__c</fullName>
    <label>CYオープン日</label>
    <type>Date</type>
</CustomField>