force-app/main/default/objects/CR_Container__c/fields/DHL__c.field-meta.xml
<CustomField>
    <fullName>DHL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DHL</label>
    <type>Checkbox</type>
</CustomField>