force-app/main/default/objects/CR_Container__c/fields/Dismantling_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_Available_Date__c</fullName>
    <label>解体可能日</label>
    <type>Date</type>
</CustomField>