force-app/main/default/objects/CR_Container__c/fields/Dismantling_Method__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_Method__c</fullName>
    <label>解体方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>