force-app/main/default/objects/CR_Container__c/fields/Document_Cut_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Cut_Date__c</fullName>
    <label>Doc cut日</label>
    <type>Date</type>
</CustomField>