force-app/main/default/objects/CR_Container__c/fields/Document_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Document_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>書類送付日（BL等）</label>
    <type>Checkbox</type>
</CustomField>