force-app/main/default/objects/CR_Container__c/fields/Drayage_Operator__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Operator__c</fullName>
    <label>ドレー業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>