force-app/main/default/objects/CR_Container__c/fields/Drayage_Request__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ドレー依頼</label>
    <type>Checkbox</type>
</CustomField>