force-app/main/default/objects/CR_Container__c/fields/Empty_VAN__c.field-meta.xml
<CustomField>
    <fullName>Empty_VAN__c</fullName>
    <label>空VANピック</label>
    <type>Date</type>
</CustomField>