force-app/main/default/objects/CR_Container__c/fields/ETD_Date__c.field-meta.xml
<CustomField>
    <fullName>ETD_Date__c</fullName>
    <label>ETD</label>
    <type>Date</type>
</CustomField>