force-app/main/default/objects/CR_Container__c/fields/File_Creation__c.field-meta.xml
<CustomField>
    <fullName>File_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ファイル作成</label>
    <type>Checkbox</type>
</CustomField>