force-app/main/default/objects/CR_Container__c/fields/Finish_Recycle__c.field-meta.xml
<CustomField>
    <fullName>Finish_Recycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リサイクル還付完了</label>
    <type>Checkbox</type>
</CustomField>