force-app/main/default/objects/CR_Container__c/fields/Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Forwarder__c</fullName>
    <label>フォワーダー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>協栄船舶</fullName>
            </value>
            <value>
                <fullName>オーシャンロジスティクス</fullName>
            </value>
            <value>
                <fullName>ファーストサービス</fullName>
            </value>
            <value>
                <fullName>WORLDing</fullName>
            </value>
            <value>
                <fullName>山九</fullName>
            </value>
            <value>
                <fullName>三通国際物流株式会社</fullName>
            </value>
            <value>
                <fullName>NorthGo</fullName>
            </value>
            <value>
                <fullName>UNIT LOGISTICS JAPAN 株式会社</fullName>
            </value>
            <value>
                <fullName>三栄ロジスティクス</fullName>
            </value>
            <value>
                <fullName>ANT Japan</fullName>
            </value>
            <value>
                <fullName>テクノトランス</fullName>
            </value>
            <value>
                <fullName>SYNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>