force-app/main/default/objects/CR_Container__c/fields/From_Vanning__c.field-meta.xml
<CustomField>
    <fullName>From_Vanning__c</fullName>
    <label>バンニング（から）</label>
    <type>DateTime</type>
</CustomField>