force-app/main/default/objects/CR_Container__c/fields/Invoice_Packing_List__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Packing_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IV / PL</label>
    <type>Checkbox</type>
</CustomField>