force-app/main/default/objects/CR_Container__c/fields/IVPL__c.field-meta.xml
<CustomField>
    <fullName>IVPL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IVPL</label>
    <type>Checkbox</type>
</CustomField>