force-app/main/default/objects/CR_Container__c/fields/Local_Agent__c.field-meta.xml
<CustomField>
    <fullName>Local_Agent__c</fullName>
    <label>現地エージェント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>