force-app/main/default/objects/CR_Container__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>CRコンテナ情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>