force-app/main/default/objects/CR_Container__c/fields/Member_Notification__c.field-meta.xml
<CustomField>
    <fullName>Member_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>会員報告</label>
    <type>Checkbox</type>
</CustomField>