force-app/main/default/objects/CR_Container__c/fields/Member_Report__c.field-meta.xml
<CustomField>
    <fullName>Member_Report__c</fullName>
    <label>会員報告</label>
    <type>Date</type>
</CustomField>