force-app/main/default/objects/CR_Container__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>メモ欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>