force-app/main/default/objects/CR_Container__c/fields/Nomination_Request__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ノミネーション依頼</label>
    <type>Checkbox</type>
</CustomField>