force-app/main/default/objects/CR_Container__c/fields/NominationDeadline__c.field-meta.xml
<CustomField>
    <fullName>NominationDeadline__c</fullName>
    <label>ノミネーション期限</label>
    <type>Date</type>
</CustomField>