force-app/main/default/objects/CR_Container__c/fields/Number_of_Loaded_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Loaded_Units__c</fullName>
    <label>積込内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>