force-app/main/default/objects/CR_Container__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>CON Noオーダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>