force-app/main/default/objects/CR_Container__c/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <label>着金日</label>
    <type>Date</type>
</CustomField>