force-app/main/default/objects/CR_Container__c/fields/Permanent_Cancellation_Request__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Cancellation_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>永抹依頼</label>
    <type>Checkbox</type>
</CustomField>