force-app/main/default/objects/CR_Container__c/fields/Port_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Arrival__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>到着港</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>CRコンテナ情報 (Z/到着港)</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>