force-app/main/default/objects/CR_Container__c/fields/Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>出発港</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>CRコンテナ情報 (Z/出発港)</relationshipLabel>
    <relationshipName>Port_of_Loading</relationshipName>
    <type>Lookup</type>
</CustomField>