force-app/main/default/objects/CR_Container__c/fields/Recycling_Movement_Report__c.field-meta.xml
<CustomField>
    <fullName>Recycling_Movement_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リサイクル移動報告</label>
    <type>Checkbox</type>
</CustomField>