force-app/main/default/objects/CR_Container__c/fields/Release_Order__c.field-meta.xml
<CustomField>
    <fullName>Release_Order__c</fullName>
    <label>リリースオーダー</label>
    <type>Date</type>
</CustomField>