force-app/main/default/objects/CR_Container__c/fields/Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company__c</fullName>
    <label>船社</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STAROCEAN</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>SITC</fullName>
            </value>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>TS LINES</fullName>
            </value>
            <value>
                <fullName>WAN HAI</fullName>
            </value>
            <value>
                <fullName>OOCL</fullName>
            </value>
            <value>
                <fullName>INTERASIA</fullName>
            </value>
            <value>
                <fullName>COSCO</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>MAERSK</fullName>
            </value>
            <value>
                <fullName>ZIM</fullName>
            </value>
            <value>
                <fullName>SINOTRANS</fullName>
            </value>
            <value>
                <fullName>EverGreen</fullName>
            </value>
            <value>
                <fullName>Yang Ming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>