force-app/main/default/objects/CR_Container__c/fields/Shipping_Company_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company_Payment_Date__c</fullName>
    <label>船社支払日</label>
    <type>Date</type>
</CustomField>