force-app/main/default/objects/CR_Container__c/fields/Surrender_Original_Sea_waybill__c.field-meta.xml
<CustomField>
    <fullName>Surrender_Original_Sea_waybill__c</fullName>
    <formula>TEXT(Member__r.Surrender_Original_Sea_waybill__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surrender/Original/Sea waybill</label>
    <type>Text</type>
</CustomField>