force-app/main/default/objects/CR_Container__c/fields/Terms_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Trade__c</fullName>
    <label>取引条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR(Prepaid)</fullName>
            </value>
            <value>
                <fullName>FOB(Collect)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>