force-app/main/default/objects/CR_Container__c/fields/To_Vanning__c.field-meta.xml
<CustomField>
    <fullName>To_Vanning__c</fullName>
    <label>バンニング（まで）</label>
    <type>DateTime</type>
</CustomField>