force-app/main/default/objects/CR_Container__c/fields/VAN_Collection__c.field-meta.xml
<CustomField>
    <fullName>VAN_Collection__c</fullName>
    <label>実入りピック</label>
    <type>Date</type>
</CustomField>