force-app/main/default/objects/CR_Container__c/fields/vehicle_eta_check__c.field-meta.xml
<CustomField>
    <fullName>vehicle_eta_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出港確認</label>
    <type>Checkbox</type>
</CustomField>