force-app/main/default/objects/CR_Container__c/fields/Vehicle_Loading_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Loading_Capacity__c</fullName>
    <label>積込台数目安</label>
    <length>255</length>
    <type>Text</type>
</CustomField>