force-app/main/default/objects/CR_Container__c/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <label>本船名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>